@@ -108,7 +108,6 @@ The release script tags the release and uploads it:
     removing 'tha.example-0.1' (and everything under it)
     Question: Register and upload to PyPI (Y/n)?
     Our reply: y
-    Showing last few lines...
     MOCK setup.py register sdist upload...
 
 That last line might be something like "mregister sdist mupload -r
